--- a/Super Mario Bros. 3/Web Build/Web Build.html
+++ b/Super Mario Bros. 3/Web Build/Web Build.html
@@ -132,5 +132,6 @@
 			</div>
 		</div>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+		<p> Press G to Toggle On/Off Gibson Mode </p>
 	</body>
 </html>
